src/test/deca/context/valid/without_class/uninitialized_var.deca
/// Description:
// 	  Test of an unitialized var
// Resultats:
// 	  
// Historique:
// 	  cree le 13/01/2023
{
    int a, b=a;
    print(a);
}