src/test/deca/context/invalid/without_class/incompatible_type_assign.deca
// Description:
//    Error : cannot assign a boolean type to an int type
//
// Result:
//    INCOMPATIBLE_TYPE_ASSIGN: Cannot assign type \(.\)\+ to variable of type \(.\)\+
//    line 9
{
    int b;
    b = true;
}